<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cn.northpark.np-web</groupId>
	<artifactId>np-web</artifactId>
	<packaging>war</packaging>
	<version>4.0.0-SNAPSHOT</version>
	<name>np-web Maven Webapp</name>
	<url>http://maven.apache.org</url>

	<!-- 集中定义依赖版本号 -->
	<properties>
		<spring.version>4.3.18.RELEASE</spring.version>
		<hibernate.version>4.3.8.Final</hibernate.version>
		<slf4j.version>1.7.21</slf4j.version>
		
		<jstl.version>1.2</jstl.version>
		<servlet-api.version>2.5</servlet-api.version>
		<jsp-api.version>2.0</jsp-api.version>
		<fastjson.version>1.2.47</fastjson.version>
	</properties>



	<dependencies>
		<!-- junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>


		<!-- spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aspects</artifactId>
				<version>${spring.version}</version>
		</dependency>


		<!-- 使用SpringMVC需配置 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- 关系型数据库整合时需配置 如hibernate jpa等 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- hibernate -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<!-- 表单验证 -->
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-validator</artifactId>
		    <version>5.4.1.Final</version>
		</dependency>


		
		<!-- 日志处理 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>


		<!-- EXCEL poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.9</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.9</version>
		</dependency>

		<!-- mysql连接 -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.47</version>
		</dependency>

		<!-- clickhouse-jdbc -->
		<dependency>
			<groupId>ru.yandex.clickhouse</groupId>
			<artifactId>clickhouse-jdbc</artifactId>
			<version>0.3.1</version>
		</dependency>


		<!-- HikariCP pool-->
		<dependency>
		    <groupId>com.zaxxer</groupId>
		    <artifactId>HikariCP</artifactId>
		    <version>3.3.1</version>
		</dependency>
		

		<!-- json -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>${fastjson.version}</version>
		</dependency>


		<!-- JSP相关 -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>${servlet-api.version}</version>
            <scope>provided</scope> 
		</dependency>

		<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>jsp-api</artifactId>
				<version>${jsp-api.version}</version>
                <scope>provided</scope>
		</dependency>
		<dependency>
				<groupId>jstl</groupId>
				<artifactId>jstl</artifactId>
				<version>${jstl.version}</version>
		</dependency>

		<!-- lang -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		
		<!-- commons-dbutils -->
		<dependency>
		    <groupId>commons-dbutils</groupId>
		    <artifactId>commons-dbutils</artifactId>
		    <version>1.7</version>
		</dependency>
				

		<!-- 爬虫 -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.8.3</version>
		</dependency>

		<!-- 爬虫 -->
<!--		<dependency>-->
<!--			<groupId>com.geccocrawler</groupId>-->
<!--			<artifactId>gecco</artifactId>-->
<!--			<version>1.1.0</version>-->
<!--		</dependency>-->

		<!-- 爬虫 httpclient -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.2</version>
		</dependency>

		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<version>2.25</version>
		</dependency>

		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.4.01</version>
		</dependency>

		<!--Google 图片压缩-->
		<dependency>
			<groupId>net.coobird</groupId>
			<artifactId>thumbnailator</artifactId>
			<version>0.4.8</version>
		</dependency>


		<!-- google - guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.0.1-jre</version>
		</dependency>



		<!-- email -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email</artifactId>
			<version>1.4</version>
		</dependency>

		<!-- 拼音 -->
		<dependency>
			<groupId>com.belerweb</groupId>
			<artifactId>pinyin4j</artifactId>
			<version>2.5.0</version>
		</dependency>


		<!-- apache 文件上传 -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.3</version>
		</dependency>


		<!-- 七牛    -->
		<dependency>
			<groupId>com.qiniu</groupId>
			<artifactId>qiniu-java-sdk</artifactId>
			<version>7.2.28</version>
		</dependency>

		<!-- 七牛    -->
		<dependency>
			<groupId>com.qiniu</groupId>
			<artifactId>happy-dns-java</artifactId>
			<version>0.1.6</version>
		</dependency>

		<!-- zooKeeper -->
<!--		<dependency>-->
<!--			<groupId>org.apache.zookeeper</groupId>-->
<!--			<artifactId>zookeeper</artifactId>-->
<!--			<version>3.4.11</version>-->
<!--		</dependency>-->

<!--		&lt;!&ndash; zooKeeper客户端curator &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>org.apache.curator</groupId>-->
<!--			<artifactId>curator-framework</artifactId>-->
<!--			<version>4.0.0</version>-->
<!--		</dependency>-->
<!--		&lt;!&ndash; zooKeeper客户端curator &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>org.apache.curator</groupId>-->
<!--			<artifactId>curator-recipes</artifactId>-->
<!--			<version>4.0.0</version>-->
<!--		</dependency>-->
<!--		-->
<!--		&lt;!&ndash; rabbitMQ &ndash;&gt;-->
<!--		<dependency>-->
<!--		    <groupId>com.rabbitmq</groupId>-->
<!--		    <artifactId>amqp-client</artifactId>-->
<!--		    <version>5.5.0</version>-->
<!--		</dependency>-->
<!--		&lt;!&ndash; spring-amqp &ndash;&gt;-->
<!--		<dependency>-->
<!--		    <groupId>org.springframework.amqp</groupId>-->
<!--		    <artifactId>spring-rabbit</artifactId>-->
<!--		    <version>1.4.5.RELEASE</version>-->
<!--		</dependency>-->
						
		<!-- lombok -->
		<dependency>
		    <groupId>org.projectlombok</groupId>
		    <artifactId>lombok</artifactId>
		    <version>1.18.4</version>
		    <scope>provided</scope>
		</dependency>

		<!-- redis -->
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>2.9.0</version>
		</dependency>
		
		<!-- yaml -->
		<dependency>
		    <groupId>org.yaml</groupId>
		    <artifactId>snakeyaml</artifactId>
		    <version>1.24</version>
		</dependency>

		<!--gson-->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.6.2</version>
		</dependency>


	</dependencies>
	<build>
		<finalName>np-web</finalName>

		<plugins>
			<!-- 资源文件拷贝插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<!-- java编译插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- 配置tomcat插件: 运行war工程必须在它的聚合工程内配置tomcat maven build命令: clean tomcat7:run 
				*如果不写tomcat7, 那么默认使用tomcat6运行 tomcat7 maven 插件支持tomcat8&jdk1.8 -->
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<port>8080</port>
					<path>/</path>
					<useBodyEncodingForURI>true</useBodyEncodingForURI>
					<uriEncoding>UTF-8</uriEncoding>
				</configuration>
			</plugin>


			<!-- 配置sts插件 -->
<!--			<plugin>-->
<!--				<artifactId>maven-eclipse-plugin</artifactId>-->
<!--				<version>2.9</version>-->
<!--				<configuration>-->
<!--					<additionalProjectnatures>-->
<!--						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>-->
<!--					</additionalProjectnatures>-->
<!--					<additionalBuildcommands>-->
<!--						<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>-->
<!--					</additionalBuildcommands>-->
<!--					<downloadSources>true</downloadSources>-->
<!--					<downloadJavadocs>true</downloadJavadocs>-->
<!--				</configuration>-->
<!--			</plugin>-->

		</plugins>

	</build>
</project>
